# expensely

./: .gitignore  README.rst  expensely.service  local_settings.py.example  local_settings_example.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
expensely/: responders.py  settings.py  urls.py  util.py  views.py  wsgi.py
expensely/templates/: base.html  welcome.html
expenses/: __init__.py  admin.py  apps.py  models.py  signals.py  views.py
expenses/migrations/: 0001_initial.py
expenses/templates/expenses/: account-list.html  account-view.html  notification-email.txt
