[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "expensely"
version = "2020.1"
description = "Expensely expense management"
readme = "README.rst"
repository = "https://github.com/inducer/expensely"
authors = ["Andreas Kloeckner <inform@tiker.net>"]
license = "MIT"
packages = [
    { include = "expenses" },
    { include = "expensely" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
# Automatically renders Django forms in a pretty, Bootstrap-compatible way.
django-crispy-forms = ">=2.3"
crispy-bootstrap3 = "^2024.1"
pytz = ">=2020.1"
# A date picker widget - https://github.com/tutorcruncher/django-bootstrap3-datetimepicker
django-bootstrap3-datetimepicker-2 = "^2.8.2"

psycopg2 = { version = "^2.8.5", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
pep8-naming = "^0.10.0"

# enable with "-E postgres"
[tool.poetry.extras]
postgres = ["psycopg2"]
