[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "expensely"
version = "2020.1"
description = "Expensely expense management"
readme = "README.rst"
repository = "https://github.com/inducer/expensely"
license = "MIT"
authors = [{ name = "Andreas Kloeckner", email = "inform@tiker.net" }]
packages = [
    { include = "expenses" },
    { include = "expensely" },
]
requires-python = ">=3.10"

dependencies = [
    "django>=5.1",
    # Automatically renders Django forms in a pretty, Bootstrap-compatible way.
    "django-crispy-forms>=2.3",
    "crispy-bootstrap3>=2024.1",
    "pytz>=2020.1",
    # A date picker widget - https://github.com/tutorcruncher/django-bootstrap3-datetimepicker
    "django-bootstrap3-datetimepicker-2>=2.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.10,<3"
]

[tool.ruff]
preview = true
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "RUF",
    "UP",
    # "DJ",
]

extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E402", # module level import not at the top of file
    "N818", # error suffix in exception names
    "RUF067", # no code in __init__ *shrug*

    # TODO
    "B904", # raise in except needs from
    "B028", # stacklevel
    "RUF012", # mutable class atttributes
    "UP031", # %-format
]
allowed-confusables = ["‐", "–"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
# mostly generated
"*/migrations/*.py" = ["Q", "E501", "RUF012", "F401", "I002", "UP"]

